верстаю блок worked ( нцжно исправить hero)

--- a/index.html
+++ b/index.html
@@ -34,5 +34,29 @@
             </div>
         </div>
     </section>
+
+    <section class="worked">
+        <div class="worked__container container">
+            <span class="worked__span span">work experience</span>
+            <h2 class="worked__title">Companies I have worked <br/>for in the past </h2>
+            <div class="worked__companies">
+                <div class="companies__item">
+                    <span class="companies__number span">01</span>
+                    <p class="componies__name">Google, Interaction Designer</p>
+                    <p class="companies__text">I currently am the lead designer on the interaction design team for Google Play.</p>
+                </div>
+                <div class="companies__item">
+                    <span class="companies__number span">02</span>
+                    <p class="componies__name">Google, Interaction Designer</p>
+                    <p class="companies__text">I currently am the lead designer on the interaction design team for Google Play.</p>
+                </div>
+                <div class="companies__item">
+                    <span class="companies__number span">03</span>
+                    <p class="componies__name">Google, Interaction Designer</p>
+                    <p class="companies__text">I currently am the lead designer on the interaction design team for Google Play.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
