--- a/index.html
+++ b/index.html
@@ -10,30 +10,35 @@
 <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
-        <div class="header__container container">
-            <div class="header__logo logo">
-                <a href="/">Robin.W</a>
+    <main class="main">
+        <header class="header">
+            <div class="header__container container">
+                <div class="header__logo logo">
+                    <a href="/">Robin.W</a>
+                </div>
+                <ul class="header__menu">
+                    <li class="menu__list"><a href="#" class="menu__link active">Experience</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">Work</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">Photography</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">Contact</a></li>
+                </ul>
             </div>
-            <ul class="header__menu">
-                <li class="menu__list"><a href="#" class="menu__link active">Experience</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Work</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Photography</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Contact</a></li>
-            </ul>
-        </div>
-    </header>
-    <section class="hero">
-        <div class="hero__container container">
-            <div class="hero__img">
-                <img src="./img/hero.jpg" alt="hero-image">
+        </header>
+        <section class="hero">
+            <div class="hero__container container">
+                <div class="hero__img">
+                    <img src="./img/hero.jpg" alt="hero-image">
+                </div>
+                <div class="hero__info">
+                    <div class="hero__content">
+                        <h1 class="hero__title">I’m Robin Williams. A Product Designer <span>based in Italy</span></h1>
+                    <p class="hero__text">I’m probably the most passionate designer you will ever get to work with. If you have a great project that needs some amazing skills, I’m your guy.</p>
+                    </div>
+                </div>
             </div>
-            <div class="hero__info">
-                <h1 class="hero__title">I’m Robin Williams. A Product Designer <span>based in Italy</span></h1>
-                <p class="hero__text">I’m probably the most passionate designer you will ever get to work with. If you have a great project that needs some amazing skills, I’m your guy.</p>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
+
 
     <section class="worked">
         <div class="worked__container container">
