верстаю блок philosophi

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robin.W</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/adaptive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
@@ -39,7 +40,6 @@
         </section>
     </main>
 
-
     <section class="worked">
         <div class="worked__container container">
             <span class="worked__span span">work experience</span>
@@ -47,20 +47,31 @@
             <div class="worked__companies">
                 <div class="companies__item">
                     <span class="companies__number span">01</span>
-                    <p class="componies__name">Google, Interaction Designer</p>
+                    <h3 class="componies__name "><span class="green">Google</span>, Interaction Designer</h3>
                     <p class="companies__text">I currently am the lead designer on the interaction design team for Google Play.</p>
                 </div>
                 <div class="companies__item">
                     <span class="companies__number span">02</span>
-                    <p class="componies__name">Google, Interaction Designer</p>
-                    <p class="companies__text">I currently am the lead designer on the interaction design team for Google Play.</p>
+                    <h3 class="componies__name "><span class="blue">Facebook</span>, Product Designer</h3>
+                    <p class="companies__text">I’ve worked on a wide variety of internal tools for facebook over the past 6 years.</p>
                 </div>
                 <div class="companies__item">
                     <span class="companies__number span">03</span>
-                    <p class="componies__name">Google, Interaction Designer</p>
-                    <p class="companies__text">I currently am the lead designer on the interaction design team for Google Play.</p>
+                    <h3 class="componies__name "><span class="pink">Dribbble</span>, Graphic Designer</h3>
+                    <p class="companies__text">I started my design career with Dribbble. I was incharge of creating illustrations for the platform.</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="philosophy">
+        <div class="philosophy__container container">
+            <div class="philosophy__left">
+                <h2 class="philosophy__title title">Philosophy & values</h2>
+                <p>I think everyone wants the same thing - relationship with humanity, peace with the metaphysical, and experience with the universe. I try to grasp these things with my values: authenticity, creativity, & hospitality.</p>
+                <a href="#" class="philosophy__link">More about me</a>
+            </div>
+            <div class="philosophy__right"></div>
         </div>
     </section>
 </body>
