--- a/index.html
+++ b/index.html
@@ -71,8 +71,42 @@
                 <p>I think everyone wants the same thing - relationship with humanity, peace with the metaphysical, and experience with the universe. I try to grasp these things with my values: authenticity, creativity, & hospitality.</p>
                 <a href="#" class="philosophy__link">More about me</a>
             </div>
-            <div class="philosophy__right"></div>
+            <div class="philosophy__right">
+                <img src="./img/1.jpg" alt="image">
+            </div>
         </div>
+    </section>
+    
+    <section class="skillset">
+        <div class="skillset__container container">
+            <div class="skillset__text">
+                <h2 class="skillset__title title">Skillset</h2>
+                <p class="skillset__paragraph">With skills in over 4 different fields of design, I am the perfect person to hire when it comes to a full fledged project. Whatever your needs are, I can pretty much take on any challenge.</p>
+            </div>
+            <div class="skillset__card">
+                <div class="card__item">
+                    <img src="./img/img-1.svg" alt="card image">
+                    <h3 class="card__title">Product Design</h3>
+                    <p>Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
+                </div>
+                <div class="card__item">
+                    <img src="./img/img-1.svg" alt="card image">
+                    <h3 class="card__title">Product Design</h3>
+                    <p>Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
+                </div>
+                <div class="card__item">
+                    <img src="./img/img-1.svg" alt="card image">
+                    <h3 class="card__title">Product Design</h3>
+                    <p>Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
+                </div>
+                <div class="card__item">
+                    <img src="./img/img-1.svg" alt="card image">
+                    <h3 class="card__title">Product Design</h3>
+                    <p>Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
+                </div>
+            </div>
+        </div>
+        
     </section>
 </body>
 </html>
